styles/styles.css
/* ... */
html {
    font-size: 62.5%;
}

body {
    margin: 0;
    font-family: 'Open Sans', Arial, sans-serif;
    font-size: 1.6rem;
}

p {
    margin-top: 0;
}

p:last-child {
    margin-bottom: 0;
}

.visually-hidden {
    position: absolute !important;
    height: 1px; width: 1px;
    overflow: hidden;
}
/* LOGO */

.icon {
    fill: #fff;
}

@media (max-width: 767px) {
    .header-logo, .footer-logo {
        width: 13.6rem;
    }

    .header-logo .icon, .footer-logo .icon {
        height: 3.6rem;
    }
}

@media (min-width: 768px) {
    .header-logo, .footer-logo {
        width: 18.7rem;
    }

    .header-logo .icon, .footer-logo .icon {
        height: 5.1rem;
    }
}

.container {
    box-sizing: border-box;
}

@media (max-width: 767px) {
    .container {
        padding-left: 2rem;
        padding-right: 2rem;
    }
}

@media (min-width: 768px) and (max-width: 960px) {
    .container {
        padding-left: 3rem;
        padding-right: 3rem;
    }
}

@media (min-width: 961px) {
    .container {
        padding-left: 1.5rem;
        padding-right: 1.5rem;
        margin-left: auto;
        margin-right: auto;
        max-width: 1560px;
    }
}

/* slogan */
.header-slogan {
    color: #ffffff;
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: .04em;
    text-align: left;
}

.header-slogan-first-line,
.header-slogan-second-line {
    display: block;
}

@media (max-width: 767px) {
    .header-slogan {
        font-size: 2.8rem;
        margin-bottom: 8.3rem;
    }

    .header-slogan-second-line {
        margin-top: 1.2rem;
        margin-left: 4rem;
        line-height: 1.2;
    }
}

@media (min-width: 768px) and (max-width: 960px) {
    .header-slogan {
        font-size: 6.4rem;
        max-width: 60rem;
        margin-bottom: 30rem;
        line-height: 1.2;
    }

    .header-slogan-second-line {
        margin-top: 0.2rem;
        margin-left: 10.8rem;
    }
}

@media (max-width: 960px) {
    .header-slogan {
        display: inline-block;
    }
}

@media (min-width: 961px) {
    .header-slogan {
        font-size: 9rem;
        margin-bottom: 21.4rem;
        line-height: 1;
    }

    .header-slogan-second-line {
        width: 100%;
        text-align: right;
    }
}

/* APP BUTTONS */

.market-button {
    background-color: #5e42b0;
    color: #ffffff;
    box-sizing: border-box;
    text-decoration: none;
    text-transform: uppercase;
    display: flex;
    align-items: center;
}

.market-button-type {
    display: block;
    font-weight: bold;
}

@media (max-width: 767px) {
    .market-button {
        width: 100%;
        max-width: 280px;
        padding-top: .6rem;
        padding-bottom: .6rem;
        padding-left: 8rem;
        border-radius: 1.8rem;
        font-size: .8rem;
    }

    .market-button + .market-button {
        margin-top: 1.4rem;
    }

    .market-button .icon {
        height: 2.4rem;
        margin-right: .6rem;
    }
}

@media (min-width: 768px) {
    .market-button {
        font-size: 1.6rem;
        padding: 1.6rem 5rem 1.6rem 3.8rem;
        border-radius: 38px;
        min-width: 31.4rem;
        justify-content: center;
    }

    .market-button .icon {
        height: 4.8rem;
        margin-right: 2.2rem;
    }

    .icon.android-icon {
        margin-left: -1.8rem;
    }
}

@media (min-width: 768px) and (max-width: 960px) {
    .market-button:nth-child(2n) {
        margin-left: 3rem;
    }
}

@media (min-width: 961px) {
    .market-button:nth-child(2n) {
        margin-left: 5.2rem;
    }
}

/* HEADER */

.header {
    background-color: #0a0e34;
    background-size: cover;
    background-position: top center;
    background-repeat: no-repeat;
    position: relative;
}

.header:before {
    content: "";
    width: 100%;
    height: 100%;
    background-color: #0a0e34;
    opacity: .9;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 0;
}

.header-logo, .footer-logo {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

@media (max-width: 767px) {
    .header {
        background-image: url("../images/football_767.jpg");
        padding-top: 3.3rem;
        padding-bottom: 8.4rem;
    }

    .header-logo {
        margin-bottom: 12.5rem;
    }
}

@media (min-width: 768px) and (max-width: 960px) {
    .header {
        background-image: url("../images/football_1280.jpg");
        padding-top: 4rem;
        padding-bottom: 8.8rem;
    }

    .header-logo {
        margin-bottom: 16.5rem;
    }

}

@media (min-width: 961px) {
    .header {
        background-image: url("../images/football_1920.jpg");
        padding-top: 4.5rem;
        padding-bottom: 10.5rem;
    }

    .header-logo {
        margin-bottom: 27.8rem;
    }

}

.header-buttons, .footer-buttons {
    display: flex;
    justify-content: center;
}

@media (max-width: 767px) {
    .header-buttons, .footer-buttons {
        flex-wrap: wrap;
        max-width: 280px;
        margin-left: auto;
        margin-right: auto;
    }
}

.header-container {
    position: relative;
}

@media (max-width: 960px) {
    .header-container{
        text-align: center;
    }
}
/* content */

.content {
    position: relative;
}

.section-main-title {
    color: #e7e7e7;
    text-transform: uppercase;
    line-height: 1.1;
    margin-top: 0;
    margin-bottom: 0;
}

.section-title {
    position: relative;
}

.section-number {
    position: absolute;
    display: inline-block;
    vertical-align: middle;
    line-height: 1.3;
    font-weight: bold;
    color: #000000;
    left: 0;
}

.section-number:after {
    content: "";
    width: 100%;
    background-color: #5e42b0;
    position: absolute;
    bottom: 0;
    left: 0;
}

.section-bg-medium .section-number:after,
.section-bg-dark .section-number:after {
    background-color: #ffffff;
}

.section-bg-medium,
.section-bg-dark {
    color: #ffffff;
}

.section-bg-dark .section-number {
    color: #9173e6;
}
/* ... */

